--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ html(lang='en', ng-app='notesApp')
                 min-height: 2000px;
                 padding-top: 70px;
             }
-        script(src='/javascripts/app.js')
+        script(src='/javascripts/ang_app.js')
     body
         nav.navbar.navbar-default.navbar-fixed-top
             .container
